--- a/src/includes/html/header.html
+++ b/src/includes/html/header.html
@@ -1,8 +1,17 @@
-<ul id="header">
-	<img src="media/img/LOGO_big.png">
-
-	<li><a href="../../index.html">Home</a></li>
-	<li><a href="../../about.html">About</a></li>
-	<li><a href="#">Doc</a></li>
-	<li><a href="../../contact.html">Contact</a></li>
-</ul>
+<header>
+	<a href="#" id="toggleMenu"><img src="images/menu.png"></a>
+	<div class="row">
+		<ul>
+			<li><img src="media/img/LOGO_big.png"></li>
+			<li>
+				<ul>
+					<li><a class="menu" href="../../">Home</a></li>
+					<li><a class="menu" href="../../about.html">About</a></li>
+					<li><a class="menu" href="#">Doc</a></li>
+					<li><a class="menu" href="../../contact.html">Contact</a></li>
+					<li id="menuOut"><img src="images/back.png"></li>
+				</ul>
+			</li>	
+		</ul>
+	</div>
+</header>
