--- a/src/includes/html/header.html
+++ b/src/includes/html/header.html
@@ -5,10 +5,10 @@
 			<li><img src="media/img/LOGO_big.png"></li>
 			<li>
 				<ul>
-					<li><a class="menu" href="../../">Home</a></li>
-					<li><a class="menu" href="../../about.html">About</a></li>
+					<li><a class="menu" href="index.html">Home</a></li>
+					<li><a class="menu" href="about.html">About</a></li>
 					<li><a class="menu" href="#">Doc</a></li>
-					<li><a class="menu" href="../../contact.html">Contact</a></li>
+					<li><a class="menu" href="contact.html">Contact</a></li>
 					<li id="menuOut"><img src="images/back.png"></li>
 				</ul>
 			</li>	
