--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -15,6 +15,7 @@ p {
 a:hover {
 	color: #fff;
 	background: #2bb673;
+	box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
 }
 
 header {
@@ -55,7 +56,7 @@ header ul li img {
 
 header ul li a {
 	color: #2bb673;
-	padding: 5px 50px;
+	padding: 5px 40px;
 	font-size: 2em;
 	display: block;
 }
