--- a/src/includes/html/header.html
+++ b/src/includes/html/header.html
@@ -1,15 +1,15 @@
 <header>
-	<a href="#" id="toggleMenu"><img src="images/menu.png"></a>
+	<a href="#" id="toggleMenu"><img src="media/img/menu.png" /></a>
 	<div class="row">
 		<ul>
-			<li><img src="media/img/LOGO_big.png"></li>
+			<li><img src="media/img/LOGO_big.png" /></li>
 			<li>
-				<ul>
+				<ul id="menu">
+					<li id="menuOut"><img src="media/img/back.png" /></li>
 					<li><a class="menu" href="index.html">Home</a></li>
 					<li><a class="menu" href="about.html">About</a></li>
 					<li><a class="menu" href="#">Doc</a></li>
 					<li><a class="menu" href="contact.html">Contact</a></li>
-					<li id="menuOut"><img src="images/back.png"></li>
 				</ul>
 			</li>	
 		</ul>
