--- a/src/includes/html/header.html
+++ b/src/includes/html/header.html
@@ -6,12 +6,12 @@
 			<li>
 				<ul id="menu">
 					<li id="menuOut"><img src="media/img/back.png" /></li>
-					<li><a class="menu" href="index.html">Home</a></li>
-					<li><a class="menu" href="about.html">About</a></li>
+					<li><a class="menu" href="index.php">Home</a></li>
+					<li><a class="menu" href="about.php">About</a></li>
 					<li><a class="menu" href="#">Doc</a></li>
-					<li><a class="menu" href="contact.html">Contact</a></li>
+					<li><a class="menu" href="contact.php">Contact</a></li>
 				</ul>
-			</li>	
+			</li>
 		</ul>
 	</div>
 </header>
