--- a/src/includes/html/header.html
+++ b/src/includes/html/header.html
@@ -7,6 +7,7 @@
 				<ul id="menu">
 					<li id="menuOut"><img src="media/img/back.png" /></li>
 					<li><a class="menu" href="index.php">Home</a></li>
+					<!-- <li><a class="menu" href="#">Downloads</a></li> -->
 					<li><a class="menu" href="about.php">About</a></li>
 					<li><a class="menu" href="#">Doc</a></li>
 					<li><a class="menu" href="contact.php">Contact</a></li>
