--- a/src/includes/html/header.html
+++ b/src/includes/html/header.html
@@ -1,5 +1,5 @@
 <header>
-	<a href="#" id="toggleMenu"><img src="media/img/menu.png" /></a>
+	<a id="toggleMenu"><img src="media/img/menu.png" /></a>
 	<div class="row">
 		<ul>
 			<li><img src="media/img/LOGO_big.png" /></li>
