--- a/src/css/sign.css
+++ b/src/css/sign.css
@@ -27,6 +27,29 @@ input[type="text"], input[type="password"], input[type="email"], select {
   border-radius: none;
 }
 
+input[type="submit"] {
+    background-color: #2bb673;
+    border: none;
+    color: white;
+    padding: 10px 10px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 35px;
+    margin: 15px 2px;
+    -webkit-transition-duration: 0.4s; /* Safari */
+    transition-duration: 0.4s;
+    cursor: pointer;
+    width: 50%;
+
+}
+
+input[type="submit"]:hover {
+	color: #fff;
+	background: #8ad5e4;
+    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+}
+
 /* lists */
 ul.input-list {
   display: block;
