--- a/src/includes/html/header.html
+++ b/src/includes/html/header.html
@@ -2,7 +2,7 @@
 	<a id="toggleMenu"><img src="media/img/menu.png" /></a>
 	<div class="row">
 		<ul>
-			<li><img src="media/img/LOGO_big.png" /></li>
+			<li class="logo"><img class="logo" src="media/img/LOGO_big.png" /></li>
 			<li>
 				<ul id="menu">
 					<li id="menuOut"><img src="media/img/back.png" /></li>
