--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -188,10 +188,18 @@ h2, h3, h4, h5, h6 {
 		background: #076b3c;
 	}
 
-	@media only screen and (max-height: 360px) {
+	@media only screen and (max-height: 530px) {
 		header ul li ul li {
 		    width: 50%;
 		}
 	}
 
-}
+	@media only screen and (max-height: 360px) {
+		header ul li ul {
+			margin-left: 10%;
+		}
+
+		header ul li ul li {
+		    width: 33%;
+		}
+	}
