--- a/src/css/forms.css
+++ b/src/css/forms.css
@@ -12,7 +12,7 @@ div {
 }
 
 /* form elements */
-input[type="text"], input[type="password"], input[type="email"], select {
+input[type="text"], input[type="password"], input[type="email"], input[type="number"], select {
     background-color: white;
     display: block;
     margin: 0;
@@ -74,7 +74,7 @@ ul.input-list li {
     ul.input-list {
         margin: 0;
     }
-    
+
     ul.input-list li {
         padding: 0;
         width: 100%;
@@ -87,7 +87,7 @@ ul.input-list li {
 /* ============================================================
   STYLE 1
 ============================================================ */
-.style-1 input[type="text"], .style-1 input[type="password"], .style-1 input[type="email"], .style-1 select {
+.style-1 input[type="text"], .style-1 input[type="password"], .style-1 input[type="email"], .style-1 input[type="number"], .style-1 select {
     padding: 10px;
     border: solid 1px gainsboro;
     -webkit-transition: box-shadow 0.3s, border 0.3s;
@@ -95,7 +95,7 @@ ul.input-list li {
     -o-transition: box-shadow 0.3s, border 0.3s;
     transition: box-shadow 0.3s, border 0.3s;
 }
-.style-1 input[type="text"]:focus, .style-1 input[type="text"].focus, .style-1 input[type="password"]:focus, .style-1 input[type="password"].focus, .style-1 input[type="email"]:focus, .style-1 input[type="email"].focus, .style-1 select:focus, .style-1 select.focus {
+.style-1 input[type="text"]:focus, .style-1 input[type="text"].focus, .style-1 input[type="number"]:focus, .style-1 input[type="number"].focus, .style-1 input[type="password"]:focus, .style-1 input[type="password"].focus, .style-1 input[type="email"]:focus, .style-1 input[type="email"].focus, .style-1 select:focus, .style-1 select.focus {
     border: solid 1px #707070;
     -webkit-box-shadow: 0 0 5px 1px #969696;
     -moz-box-shadow: 0 0 5px 1px #969696;
