--- a/src/css/main.css
+++ b/src/css/main.css
@@ -38,9 +38,19 @@ button.services:hover {
     box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
 }
 
+.center {
+	margin: auto;
+    width: 50%;
+    padding: 10px;
+}
+
 
 /*------------------Displaying for Smartphones--------------------------------*/
 @media only screen and (max-width: 40.063em) {
+
+	.center {
+		width: 100%;
+	}
 
 	ul.input-list li.List-Left-Aligned {
 		width: 100%;
