--- a/src/css/core.css
+++ b/src/css/core.css
@@ -12,6 +12,10 @@ p {
 	font-size: 1.1em;
 }
 
+.row {
+	width: 80%;
+}
+
 a:hover {
 	color: #fff;
 	background: #2bb673;
@@ -56,7 +60,7 @@ header ul li ul li {
 header ul li img {
 	max-width: 135px;
 	max-height: 106px;
-	margin-right: 10em;
+	margin-right: 0px;
 }
 
 header ul li a {
@@ -118,6 +122,12 @@ h2, h3, h4, h5, h6 {
 	width: 100%;
 }
 
+.center {
+	margin: auto;
+    width: 50%;
+    padding: 10px;
+}
+
 @media only screen and (max-width: 64.063em) {
 
 	header ul li a {
@@ -136,11 +146,6 @@ h2, h3, h4, h5, h6 {
 	header ul li img {
 		max-width: 120px;
 		max-height: 100px;
-		margin-right: 2em;
-	}
-
-	.row {
-		width: 95%;
 	}
 
 	.my-video {
@@ -152,12 +157,13 @@ h2, h3, h4, h5, h6 {
 }
 
 
-@media only screen and (max-width: 40.063em) {
+@media only screen and (max-width: 44.063em) {
 
 	header ul li ul {
 		background: #2bb673;
     	display: none;
 		height: 100%;
+		width: 70%;
 		position: fixed;;
 		top: 0px;
 		right: 0px;
@@ -189,7 +195,6 @@ h2, h3, h4, h5, h6 {
 	}
 
 	.row {
-		width: 80%;
 		height:100%;
 	}
 
@@ -235,7 +240,7 @@ h2, h3, h4, h5, h6 {
 		header ul li ul li {
 		    width: 50%;
 		}
-		
+
 		header ul li ul li a {
 			padding: 10px 20px;
 		}
