--- a/src/css/dashboard.css
+++ b/src/css/dashboard.css
@@ -15,6 +15,8 @@
 }
 
 .dashboard-container.fullscreen {
+	border-radius: 0px;
+	box-shadow: none;
 	width: 100%; 
     height: 100%; 
     position: fixed; 
