--- a/resources/assets/sass/partials/main.scss
+++ b/resources/assets/sass/partials/main.scss
@@ -9,21 +9,23 @@ body {
     margin-bottom: 250px;
 }
 
-*, h1 {
+* {
     font-family: 'Open Sans', sans-serif;
     font-size: 20px;
+}
+
+h1, h2, h3, h4, h5, h6 {
+    color: #2bb673;
 }
 
 h1 {
     text-align: center;
     font-size: 3em;
-    color: #2bb673;
     margin-bottom: 50px;
 }
 
 h6 {
     font-size: 1em;
-    color: #2bb673;
 }
 
 ul {
@@ -41,7 +43,7 @@ a.services {
     padding: 10px 10px;
     text-align: center;
     display: inline-block;
-    font-size: 35px;
+    font-size: 28px;
     margin: 15px 2px;
     -webkit-transition-duration: 0.4s;
     transition-duration: 0.4s;
