Last changes before Upgrading to Laravel 5.3

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -1,5 +1,8 @@
 // @import "node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
 
+@import "mixins/main";
+@import "variables/main";
+
 @import "partials/main";
 
 @import "partials/header";
