--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -1,7 +1,7 @@
-// @import "node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
-
 @import "mixins/main";
+
 @import "variables/main";
+@import "variables/framework";
 
 @import "partials/main";
 
