--- a/resources/assets/sass/partials/main.scss
+++ b/resources/assets/sass/partials/main.scss
@@ -149,7 +149,7 @@ button, .button {
 
     padding: 3px 3px;
     text-align: center;
-    @include rotate(90deg);
+    // @include rotate(90deg);
 }
 
 #smart-assistance-menu {
