--- a/resources/assets/sass/partials/mobile.scss
+++ b/resources/assets/sass/partials/mobile.scss
@@ -24,6 +24,11 @@
     a.services {
         height: 90px;
     }
+
+    .navbar-default .navbar-nav li a {
+        padding-left: 6px;
+        padding-right: 6px;
+    }
 }
 
 @media only screen and (max-width: 500px) {
@@ -33,6 +38,10 @@
 
     h1 {
         word-wrap: break-word;
+    }
+
+    #smart-assistance-menu {
+        width: calc(100% - 50px);
     }
 }
 
