Gradually changing front end theme

--- a/src/resources/assets/sass/partials/footer.scss
+++ b/src/resources/assets/sass/partials/footer.scss
@@ -2,7 +2,7 @@
     position: absolute;
     bottom: 0;
     width: 100%;
-    background-color: #cccccc;
+    // background-color: #50ADC8;
 }
 
 footer {
@@ -14,7 +14,7 @@ footer ul {
 }
 
 #footer_parent {
-    background-color: #cccccc;
+    // background-color: #50ADC8;
     text-align: left;
     padding-left: 10%;
     position: static;
